# imgsort

./: .gitignore  Cargo.toml  README.md  project.sublime-project  rustfmt.toml
src/: config.rs  event.rs  event_handler.rs  main.rs  state.rs  view.rs
src/image/: error.rs  mod.rs
src/trash/: menubar.rs  statusbar.rs
src/ui/: compare_images.rs  image_list.rs  images.rs  menubar.rs  mod.rs  statusbar.rs
src/ui/panes/: mod.rs
src/ui/panes/compare/: progressbar.rs
src/views/: main.rs  mod.rs
